# sparc

./: .gitignore  .gitigonre  .pre-commit-config.yaml  .readthedocs.yaml  Authors.md  CONTRIBUTING.md  README.md  env_sparc.yaml  pyproject.toml
.github/workflows/: ci.yaml  draft-pdf.yml
docs/: .readthedocs.yaml  requirements.txt
docs/source/: DataProcess.rst  analysis.rst  calculator.rst  conf.py  deepmd.rst  index.rst  install.rst  md.rst  plumed_wrapper.rst  quickstart.rst  tutorial.rst  workflow.drawio  workflow.rst
docs/tests/nh3bh3/: INCAR
docs/tests/nh3bh3/iter_000002/02.dpmd/dft_candidates/: info
examples/: README.md  SPARC_Tutorial.ipynb
paper/: paper.md  ref.bib
scripts/: GitPush  plot_model_devi.py
sparc/: sparc.py
sparc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sparc/src/: active_learning.py  ase_md.py  calculator.py  data_processing.py  deepmd.py  labelling.py  lammpsmd.py  plumed_wrapper.py
sparc/src/utils/: analysis.py  banner.py  chemview.py  logger.py  mlp_pes.py  plot_utils.py  read_incar.py  read_input.py  utils.py  workflow.py
tests/: test_binaries.py  test_cli.py  test_dft_wrapper.py  test_import.py  test_input.py  test_mlp_pipeline.py  test_model.py
tests/data/: water.traj  water_checkpoint.pkl
tests/data/cp2k_tmp/: cp2k_template.inp  results.json
tests/data/mlp/: AseMD.traj  input.json
tests/data/vasp_tmp/: INCAR  results.json
