[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparc"
version = "0.1.0"
description = "A package for DeepMD training and on-the-fly learning with VASP"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [
  { name = "Rahul Verma", email = "rverma7@ncsu.edu" }
]
keywords = ["deepmd", "molecular dynamics", "active learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry"
]

dependencies = [
  "ase==3.24.0",
  "numpy",
  "pandas",
  "scipy",
  "dpdata",
  "cython",
  "PyYAML"
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "sphinx-autodoc-typehints"]

[project.scripts]
sparc = "sparc.sparc:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sparc", "sparc.*"]

# Don’t lint compiled stuff 
[tool.ruff]
line-length = 88
target-version = "py310"

# Since your package is a flat layout (top-level sparc/):
src = ["sparc"]
exclude = [
  ".git",
  ".venv",
  "build",
  "dist",
  "docs",
  "sparc/src/utils/workflow.py",
  "sparc/src/utils/plot_utils.py",
  "sparc/src/utils/chemview.py",
]

#xtend-select = ["E", "F", "W"]
[tool.ruff.lint]
extend-select = [
  "I",    # import sorting
  "E",    # import error
  "F",    # pyflakes
  "W",    # warning
]
ignore = [ "E501" ]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]     # re-exports are common
"scripts/**" = ["T201"]         # if you print in CLI scripts (optional)
"examples/**" = ["T201"]        # optional
